<resources>
    <string name="app_name">PortionCat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="both">Both</string>
    <string name="wet_or_dry">Do you feed dry or wet food?</string>
    <string name="title_activity_find_vet">Map</string>
    <string name="wet">Wet</string>
    <string name="_9">9</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="add_photo">Add Photo</string>
    <string name="birthday">Birthday:</string>
    <string name="cancel">Cancel</string>
    <string name="charlie">Charlie</string>
    <string name="finished">Finished</string>
    <string name="dry">Dry</string>
    <string name="take_photo">Take Photo</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="name">Name:</string>
    <string name="dry_food">dry food</string>
    <string name="toro">Toro</string>
</resources>
